<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MypagenotloginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_login_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/top_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_20"
                android:src="@drawable/img_bell" />

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_20"
                android:src="@drawable/img_setting" />

            <ImageView
                android:clickable="true"
                android:id="@+id/btn_close"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_20"
                android:src="@drawable/img_close" />

        </LinearLayout>

        <TextView
            android:clickable="true"
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_55"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@android:color/transparent"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_des_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_linear" />

        <TextView
            android:id="@+id/txt_des_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_55"
            android:text="@string/txt_des_login"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_35"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_login_banner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contraint_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_135"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- HorizontalScrollView의 경우 안에 있는 뷰의 width값이 무조건 wrap_content로 됨-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_37"
                            android:layout_marginEnd="@dimen/margin_10"
                            app:cardCornerRadius="@dimen/margin_20">

                            <View
                                android:layout_width="@dimen/margin_245"
                                android:layout_height="match_parent"
                                android:background="@drawable/background_cardview1"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_15"
                                android:layout_marginTop="@dimen/margin_15"
                                android:text="@string/txt_cardview1_top"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|end"
                                android:layout_marginEnd="@dimen/margin_7"
                                android:layout_marginBottom="@dimen/margin_7"
                                android:background="@drawable/background_cardview1_btn_buy"
                                android:paddingHorizontal="@dimen/margin_15"
                                android:paddingVertical="@dimen/margin_5"
                                android:text="@string/txt_cardview1_bottom"
                                android:textColor="@color/red"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/margin_37"
                            app:cardCornerRadius="@dimen/margin_20">

                            <View
                                android:layout_width="@dimen/margin_245"
                                android:layout_height="match_parent"
                                android:background="@drawable/background_cardview2"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_15"
                                android:layout_marginTop="@dimen/margin_15"
                                android:text="@string/txt_cardview2_top"
                                android:textColor="@color/white"
                                android:textSize="16sp" />


                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                </HorizontalScrollView>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_marginBottom="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_width="@dimen/margin_235"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_55"
                android:orientation="vertical"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contraint_cardview">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_home"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_myhollys"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:drawableRight="@drawable/btn_more"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_smartorder"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:drawableRight="@drawable/btn_more"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_delivery"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:drawableRight="@drawable/btn_more"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_hollysmall"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:drawableRight="@drawable/btn_more"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_hollysmenu"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:drawableRight="@drawable/btn_more"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_findmall"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_news"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:drawableRight="@drawable/btn_more"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_question"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/txt_mypage_customeropinion"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>