<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MypagenotloginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_login_banner_logined"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/top_linear_logined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_20"
                android:src="@drawable/img_bell" />

            <ImageView
                android:id="@+id/btn_setting"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_20"
                android:src="@drawable/img_setting" />

            <ImageView
                android:id="@+id/img_close"
                android:clickable="true"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_20"
                android:src="@drawable/img_close" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_login_logined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_55"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:text="안정은님"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/txt_desbox_login_logined"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_linear_logined" />

        <RelativeLayout
            android:id="@+id/txt_desbox_login_logined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_login_logined"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login_logined">

            <TextView
                android:id="@+id/txt_des1_login_logined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="고객님은"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/des_img"
                android:layout_width="@dimen/margin_115"
                android:layout_height="@dimen/margin_17"
                android:src="@drawable/img_des"
                android:layout_toRightOf="@id/txt_des1_login_logined"/>


            <TextView
                android:id="@+id/txt_des2_login_logined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="멤버입니다"
                android:layout_toRightOf="@id/des_img"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_des3_login_logined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_des1_login_logined"
                android:text="크라운 적립하고 특별한 혜택 받으세요."
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_des1_login_logined" />



        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_35"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_login_banner_logined">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contraint_cardview_logined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_135"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- HorizontalScrollView의 경우 안에 있는 뷰의 width값이 무조건 wrap_content로 됨-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">ㅇ

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_37"
                            android:layout_marginEnd="@dimen/margin_10"
                            app:cardCornerRadius="@dimen/margin_20">

                            <View
                                android:layout_width="@dimen/margin_245"
                                android:layout_height="match_parent"
                                android:background="@drawable/background_cardview1"

                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/margin_45"
                                android:gravity="center_vertical"
                                android:layout_gravity="bottom"
                                android:layout_marginTop="@dimen/margin_15"
                                android:paddingLeft="@dimen/margin_20"
                                android:text="0원"
                                android:textStyle="bold"
                                android:background="#80000000"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|end"
                                android:layout_marginEnd="@dimen/margin_10"
                                android:layout_marginBottom="@dimen/margin_10"
                                android:background="@drawable/background_cardview1_btn_buy_logined"
                                android:paddingHorizontal="@dimen/margin_15"
                                android:paddingVertical="@dimen/margin_5"
                                android:text="@string/txt_cardview1_bottom"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/margin_245"
                            android:layout_height="@dimen/margin_135"
                            android:layout_marginEnd="@dimen/margin_37"
                            app:cardCornerRadius="@dimen/margin_20">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/img_cardview2_logined"

                                />




                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                </HorizontalScrollView>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="@dimen/margin_235"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_40"
                android:orientation="vertical"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contraint_cardview_logined">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_home"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:drawableRight="@drawable/btn_more"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_myhollys"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:drawableRight="@drawable/btn_more"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_smartorder"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:drawableRight="@drawable/btn_more"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_delivery"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:drawableRight="@drawable/btn_more"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_hollysmall"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:drawableRight="@drawable/btn_more"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_hollysmenu"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_findmall"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:drawableRight="@drawable/btn_more"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_news"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_question"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:gravity="start|center_vertical"
                    android:text="@string/txt_mypage_customeropinion"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>